// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a subscription to the gateway 1`] = `
Object {
  "event": "pageVisited",
  "functionId": "subscription-test-function",
  "subscriptionId": "pageVisited-subscription-test-function",
}
`;

exports[`should fail to a add a subscription to a none existing function 1`] = `[Error: Failed to subscribe the event pageVisited to the function none-exiting-function due the error: Function "none-exiting-function" not found.]`;

exports[`should fail to a remove a none-existing subscription 1`] = `[Error: Failed to unsubscribe the subscription pageVisited-none-existing-function due the error: Subscription "pageVisited-none-existing-function" not found.]`;

exports[`should list the added subscriptions 1`] = `
Object {
  "subscriptions": Array [
    Object {
      "event": "pageVisited",
      "functionId": "subscription-test-function",
      "subscriptionId": "pageVisited-subscription-test-function",
    },
  ],
}
`;
